--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 html, body {
   height: auto;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 html {
@@ -21,10 +22,16 @@ input:focus {
 
 #register-container {
   display: flex;
-  max-width: 900px;
-  min-height: 80vh;
+  max-width: 90vw;
+  min-height: 90vh;
   margin: 2rem auto;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+@media screen and (max-width: 769px) {
+  #register-container {
+    flex-direction: column;
+  }
 }
 
 #register-banner {
